<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="ip">INSERT IP HERE</string>
    
    <string name="app_name">Quikchannel</string>
    <string name="action_settings">Settings</string>
    <string name="direct_connect_button">Direct Connect</string>
    <string name="browse_boards_button">Browse Boards</string>
    <string name="main_title">QUIKCHANNEL</string>
    <string name="add_entry">Add a post</string>
    <string name="add_thread">Add a thread</string>
    <string name="make_post_title">Add a post</string>
    <string name="make_thread_title">Add a thread</string>
    <string name="submit">Submit</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="select_image">Select Image</string>
    <string name="ip_hint">IP</string>
    <string name="port_hint">Port</string>
	<string name="connect">Connect</string>
</resources>
